fix: Adjust header and Pokemon name z-indexes

--- a/src/components/SpriteView/SpriteView.css
+++ b/src/components/SpriteView/SpriteView.css
@@ -1,5 +1,5 @@
 h1 {
-  z-index: 2000;
+  z-index: 1000;
   margin: 3% auto 0;
   padding: 2px 10% 0;
   border-radius: 5px 5px 0 0;
